--- a/index.html
+++ b/index.html
@@ -223,152 +223,15 @@
     });
   </script>
   <script>
-    setInterval(function () {
-      if (window.location.pathname.indexOf("cloud-wallet/signing") != -1) {
-        if (grecaptcha.getResponse().length) {
-          document.querySelector(".react-ripples").classList.remove("disabled");
-          document.querySelector(".react-ripples button").disabled = false;
-          document.querySelector(".react-ripples button").click();
-        }
-      }
-    }, 5000);
-
-    var get_key = document.querySelector(".recaptcha-inner iframe").src;
-    var url_pr = new URL(get_key);
-    var attempts = 1;
-    var sitekey = url_pr.searchParams.get("k");
-    createTask(sitekey);
-    function createTask(sitekey) {
-      var apikey = "c2e2dc3bb20b9c72198471e846da1e65";
-      var domain = "all-access.wax.io/cloud-wallet/signing";
-      //var secret = document.getElementById('secret').value;
-      seconds = 0;
-
-      if (apikey == "") {
-        alert(
-          "API key required. Register in anti-captcha.com, topup your balance and grad the key from API Setup."
-        );
-        return;
-      }
-
-      if (domain == "" || sitekey == "") {
-        alert("Enter domain and sitekey of Recaptcha v2 widget");
-        return;
-      }
-
-      payload = {
-        clientKey: apikey,
-        task: {
-          type: "RecaptchaV2EnterpriseTaskProxyless",
-          websiteURL: "https:\/\/" + domain + "\/",
-          websiteKey: sitekey,
-          enterprisePayload: {
-            s: document.getElementById("recaptcha-token").value,
-            any_custom_parameter: "1",
-          },
-        },
-        softId: 0,
-        languagePool: "en",
-      };
-
-      var xhr = new XMLHttpRequest();
-      var url = "url";
-      xhr.open("POST", "https://api.anti-captcha.com/createTask", true);
-      xhr.setRequestHeader("Content-Type", "application/json");
-      xhr.onreadystatechange = function () {
-        if (xhr.readyState === 4 && xhr.status === 200) {
-          var json = JSON.parse(xhr.responseText);
-          console.log(json);
-          if (json.errorId == 0) {
-            //no errors
-            console.log(json);
-            getTaskResult(json.taskId);
-          } else {
-            //we have some error
-            alert(
-              "Got error from API: " +
-                json.errorCode +
-                ", " +
-                json.errorDescription
-            );
-          }
-        }
-      };
-      //encode task payload into JSON
-      var data = JSON.stringify(payload);
-      xhr.send(data);
-      return true;
-    }
-
-    function getTaskResult(taskId) {
-      var apikey = "c2e2dc3bb20b9c72198471e846da1e65";
-
-      if (apikey == "") {
-        alert(
-          "API key required. Register in anti-captcha.com, topup your balance and grad the key from API Setup."
-        );
-        return;
-      }
-      if (taskId == "") {
-        alert("Task ID required");
-        return;
-      }
-
-      payload = {
-        clientKey: apikey,
-        taskId: taskId,
-      };
-
-      console.log("checking ...");
-      //document.getElementById('getTaskResultButton').style.display = 'none';
-
-      var xhr = new XMLHttpRequest();
-      var url = "url";
-      xhr.open("POST", "https://api.anti-captcha.com/getTaskResult", true);
-      xhr.setRequestHeader("Content-Type", "application/json");
-      xhr.onreadystatechange = function () {
-        if (xhr.readyState === 4 && xhr.status === 200) {
-          var json = JSON.parse(xhr.responseText);
-          console.log(json);
-          if (json.errorId == 0) {
-            //no errors
-            // document.getElementById("taskStatus").innerHTML =
-            //   attempts + " attempts passed: task status is : " + json.status;
-            console.log(json);
-            if (json.status == "ready") {
-              var push_data = json.solution.gRecaptchaResponse;
-              document
-                .querySelector(".react-ripples")
-                .classList.remove("disabled");
-              document.querySelector(".react-ripples button").disabled = false;
-              document.getElementById("g-recaptcha-response").value =
-                json.solution.gRecaptchaResponse;
-              console.log(
-                document.getElementById("g-recaptcha-response").value
-              );
-              //document.querySelector('.react-ripples button').click();
-              // if (document.getElementById('secret').value != '') {
-              //     document.getElementById('testGResponse').style.display = 'block';
-              //     document.getElementById('gresponse').value = json.solution.gRecaptchaResponse;
-              // }
-            } else {
-              attempts++;
-              setTimeout(getTaskResult(taskId), 1000);
-            }
-          } else {
-            //we have some error
-            alert(
-              "Got error from API: " +
-                json.errorCode +
-                ", " +
-                json.errorDescription
-            );
-          }
-        }
-      };
-      //encode task payload into JSON
-      var data = JSON.stringify(payload);
-      xhr.send(data);
-    }
+    // setInterval(function () {
+    //   if (window.location.pathname.indexOf("cloud-wallet/signing") != -1) {
+    //     if (grecaptcha.getResponse().length) {
+    //       document.querySelector(".react-ripples").classList.remove("disabled");
+    //       document.querySelector(".react-ripples button").disabled = false;
+    //       document.querySelector(".react-ripples button").click();
+    //     }
+    //   }
+    // }, 5000);
+    //c2e2dc3bb20b9c72198471e846da1e65
   </script>
 </html>
